k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
  labels:
    app: go-web-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: go-web-app

  template:
    metadata:
      labels:
        app: go-web-app

    spec:
      containers:
      - name: go-web-app
        image: lakshaychaudary/go-web-app:v1

        ports:
        - containerPort: 8080
