k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-ingress
spec:
  ingressClassName: nginx

  rules:
  - host: go-web.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-web-service
            port:
              number: 80
